# Android-Simprints-ID

./: .aiexclude  .clabot  .editorconfig  .gitignore  .gitmodules  CNAME  CommCare-Case-Sync-README.md  DESIGN.md  INTEGRATION_PLAN.md  InstrumentedTest.sh  README.md  SECURITY.md  bitbucket-pipelines.yml  bitrise.yml  build.gradle  build.gradle.kts  circle.yml  config.gradle  copyEnvVarsToGradleProperties.bat  coverage.ec  dependencies.gradle  environmentSetup.sh  gradle.properties  gradlew  index.html  instrumentedTest.py  instrumented_test  instrumented_test.py  projects.csv  renovate.json  settings.gradle  settings.gradle.kts  sonar-project.properties  status.json  transifex.yml  update_google_services_jsons.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  event-system.md  jira.yml
build-logic/: .gitignore  README.md  build_properties.gradle  build_properties.gradle.kts  dependency_health.gradle  libs.versions.toml  proguard-rules.pro  settings.gradle.kts  signing_properties.gradle.kts  sonarqube.gradle
buildSrc/: build.gradle.kts  build.properties  build_config.gradle  build_properties.gradle  dependencies.gradle  signing_config.gradle
ci/: README.md  ci_settings  deploy_config.gradle  signing_config.gradle
clientapi/: build.gradle  build.gradle.kts
core/: build.gradle  build.gradle.kts
eventsystem/: build.gradle.kts
face/: README.md  build.gradle  build.gradle.kts
faces/: build.gradle
featurealert/: README.md  build.gradle.kts
featureexitform/: README.md
fingerprintmatcher/src/main/jni/: CMakeLists.txt  afm-jni.c
(+13128 files in other folders)
